--- a/index.html
+++ b/index.html
@@ -324,11 +324,11 @@
 
         <div class="row wow fadeInUp">
 
-          <!-- <div class="col-lg-6">
+          <div class="col-lg-6">
             <div class="map mb-4 mb-lg-0">
               <iframe src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Sozopol+(My%20Business%20Name)&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"" frameborder="0" style="border:0; width: 100%; height: 312px;" allowfullscreen></iframe>
             </div>
-          </div> -->
+          </div>
 
           <div class="col-lg-6">
             <div class="row">
