--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
 
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
+  <link href="css/header.css" rel="stylesheet">
+  <link href="css/intro.css" rel="stylesheet">
+  <link href="css/aboutUs.css" rel="stylesheet">
+  <link href="css/services.css" rel="stylesheet">
+  <link href="css/portfolio.css" rel="stylesheet">
+  <link href="css/team.css" rel="stylesheet">
+  <link href="css/contactUs.css" rel="stylesheet">
+  <link href="css/footer.css" rel="stylesheet">
+
 
 </head>
 
@@ -86,44 +95,44 @@
 
         <header class="section-header">
           <h3>About Us</h3>
-          <p>Young and Enthusiastic software Engineers ready to dive in the enormous world of the Software Development business.</p>
+          <p>Enthusiastic software Engineers ready to dive in the enormous world of the Software Development business.</p>
         </header>
 
         <div class="row about-container">
 
           <div class="col-lg-6 content order-lg-1 order-2">
             <p>
-              We can Provide several services. 
+              Some text here .... 
             </p>
 
             <div class="icon-box wow fadeInUp">
-              <!-- <div class="icon"><i class="fa fa-shopping-bag"></i></div> -->
-              <h4 class="title"><a href="">Website Design</a></h4>
-              <p class="description">We can develop the USX of your website the way you desire  it to be.</p>
+              <div class="icon"><i class="fa fa-bar-chart"></i></div>
+              <h4 class="title"><a href="">Our story</a></h4>
+              <p class="description">Blabla bla bla</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
-              <!-- <div class="icon"><i class="fa fa-photo"></i></div> -->
-              <h4 class="title"><a href="">WebPage Applications</a></h4>
+              <div class="icon"><i class="fa fa-photo"></i></div>
+              <h4 class="title"><a href="">Our Goals </a></h4>
               <p class="description">WE can Create your Web App.</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
-            <!-- <div class="icon"><i class="fa fa-bar-chart"></i></div> -->
-              <h4 class="title"><a href="">Desktop Applications</a></h4>
+              <div class="icon"><i class="fa fa-bar-chart"></i></div>
+              <h4 class="title"><a href="">Experiance</a></h4>
               <p class="description">WE can Create the Desktop program you need..</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
-              <!-- <div class="icon"><i class="fa fa-bar-chart"></i></div> -->
-                <h4 class="title"><a href="">Maintandance</a></h4>
-                <p class="description">WE can Maintenance all of your system created for you.</p>
-              </div>
+                <div class="icon"><i class="fa fa-bar-chart"></i></div>
+                <h4 class="title"><a href="">Texhnical base</a></h4>
+                <p class="description">bla bla bla bla     padding-top: 15px     padding-top: 15px      padding-top: 15px   padding-top: 15px </p>
+            </div>
 
           </div>
 
           <div class="col-lg-6 background order-lg-2 order-1 wow fadeInUp">
-           <!-- <img src="img/about-img.svg" class="img-fluid" alt=""> -->
+           <img src="img/about-img.svg" class="img-fluid" alt="">
           </div>
         </div>
       </div>
@@ -207,7 +216,7 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
+              <li data-filter=".filter-card">Design</li>
               <li data-filter=".filter-web">Web</li>
             </ul>
           </div>
@@ -273,7 +282,6 @@
         </div>
 
         <div class="row">
-
           <div class="col-lg-3 col-md-6 wow fadeInUp">
             <div class="member">
               <img src="img/team-1.jpg" class="img-fluid" alt="">
@@ -323,56 +331,53 @@
         </div>
 
         <div class="row wow fadeInUp">
-
-          <div class="col-lg-6">
+          <!-- <div class="col-lg-6">
             <div class="map mb-4 mb-lg-0">
               <iframe src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Sozopol+(My%20Business%20Name)&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"" frameborder="0" style="border:0; width: 100%; height: 312px;" allowfullscreen></iframe>
             </div>
-          </div>
+          </div> -->
+            <div class="col-lg-6">
+              <div class="row">
+                <div class="col-md-5 info">
+                  <i class="ion-ios-location-outline"></i>
+                  <p>Na lunata str.</p>
+                </div>
+                <div class="col-md-4 info">
+                  <i class="ion-ios-email-outline"></i>
+                  <p>mfmksdmfd@gmail.com</p>
+                </div>
+                <div class="col-md-3 info">
+                  <i class="ion-ios-telephone-outline"></i>
+                  <p>+88 888 888 / +45 71 88 02 02</p>
+                </div>
+              </div>
 
-          <div class="col-lg-6">
-            <div class="row">
-              <div class="col-md-5 info">
-                <i class="ion-ios-location-outline"></i>
-                <p>Na lunata str.</p>
-              </div>
-              <div class="col-md-4 info">
-                <i class="ion-ios-email-outline"></i>
-                <p>mfmksdmfd@gmail.com</p>
-              </div>
-              <div class="col-md-3 info">
-                <i class="ion-ios-telephone-outline"></i>
-                <p>+88 888 888 / +45 71 88 02 02</p>
-              </div>
-            </div>
-
-            <div class="form">
-              <div id="sendmessage">Your message has been sent. Thank you!</div>
-              <div id="errormessage"></div>
-              <form action="" method="post" role="form" class="contactForm">
-                <div class="form-row">
-                  <div class="form-group col-lg-6">
-                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+              <div class="form">
+                <div id="sendmessage">Your message has been sent. Thank you!</div>
+                <div id="errormessage"></div>
+                <form action="" method="post" role="form" class="contactForm">
+                  <div class="form-row">
+                    <div class="form-group col-lg-6">
+                      <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                      <div class="validation"></div>
+                    </div>
+                    <div class="form-group col-lg-6">
+                      <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                      <div class="validation"></div>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
                     <div class="validation"></div>
                   </div>
-                  <div class="form-group col-lg-6">
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                  <div class="form-group">
+                    <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
                     <div class="validation"></div>
                   </div>
-                </div>
-                <div class="form-group">
-                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                  <div class="validation"></div>
-                </div>
-                <div class="form-group">
-                  <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-                  <div class="validation"></div>
-                </div>
-                <div class="text-center"><button type="submit" title="Send Message">Send Message</button></div>
-              </form>
+                  <div class="text-center"><button type="submit" title="Send Message">Send Message</button></div>
+                </form>
+              </div>
             </div>
-          </div>
-
         </div>
 
       </div>
