Team section background change

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <!--==========================
       Services Section
     ============================-->
-    <section id="services" class="section-bg">
+    <section id="services">
       <div class="container">
 
         <header class="section-header">
