Change some styles

--- a/index.html
+++ b/index.html
@@ -161,16 +161,19 @@
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"><i class="ion-ios-bookmarks-outline" style="color: #e9bf06;"></i></div>
-              <h4 class="title"><a href="">Website Design</a></h4>
-              <p class="description">We can develop the USX of your website the way you desire  it to be.We work with Angular Unity PS bla bla bla</p>
+              <h4 class="title"><a href="">Back-End Integrations</a></h4>
+              <p class="description">We believe backend development is the baseof modern software and services. 
+                Whether it’s Java or C#, we’ve got you covered.We have experience in building backend systems
+                from the ground up based on the customers’ needs.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"><i class="ion-ios-paper-outline" style="color: #3fcdc7;"></i></div>
-              <h4 class="title"><a href="">Website Design</a></h4>
-              <p class="description">We can develop the USX of your website the way you desire  it to be.We work with Angular Unity PS bla bla bla</p>
+              <h4 class="title"><a href="">Content Creation</a></h4>
+              <p class="description">We provide design and development expertise to deliver the content that meets your needs. We have extensive
+                experience across a variety of products from back-end only projects to full stack back-end and front-end.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
@@ -361,7 +364,7 @@
                       <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                       <div class="validation"></div>
                     </div>
-                    <div class="form-group col-lg-6">
+                      <div class="form-group col-lg-6">
                       <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
                       <div class="validation"></div>
                     </div>
